[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/DayNightcycle2.tres" type="Animation" id=1]
[ext_resource path="res://Scripts/DayNightcycle.gd" type="Script" id=2]
[ext_resource path="res://sprites/moon.png" type="Texture" id=3]
[ext_resource path="res://sprites/light.png" type="Texture" id=4]
[ext_resource path="res://sprites/sun.png" type="Texture" id=5]
[ext_resource path="res://sprites/cloud.png" type="Texture" id=6]
[ext_resource path="res://sprites/mountains.png" type="Texture" id=7]
[ext_resource path="res://sprites/pyrateship.png" type="Texture" id=8]
[ext_resource path="res://sprites/water.png" type="Texture" id=9]
[ext_resource path="res://assets/water effect.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/grass2.png" type="Texture" id=11]
[ext_resource path="res://sprites/grass.png" type="Texture" id=12]
[ext_resource path="res://sprites/dirt.png" type="Texture" id=13]
[ext_resource path="res://sprites/light2.png" type="Texture" id=14]
[ext_resource path="res://font/8bit.tres" type="DynamicFont" id=15]
[ext_resource path="res://Scripts/Timer.gd" type="Script" id=16]
[ext_resource path="res://sprites/tree.png" type="Texture" id=17]
[ext_resource path="res://sprites/bush.png" type="Texture" id=18]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.123404, 0.285106 )
colors = PoolColorArray( 1, 1, 1, 1, 0.214844, 0.907989, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Animation" id=5]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -3.39986, 1.20196, -3.39986 ]
}

[sub_resource type="Animation" id=6]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -3.39986, 1.20196, -3.39986 ]
}

[sub_resource type="CanvasItemMaterial" id=7]
blend_mode = 2

[node name="Day Night cycle" type="AnimationPlayer"]
autoplay = "day night"
anims/DayNightcycle2 = ExtResource( 1 )
"anims/day night" = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Day Night cycle" type="Node2D" parent="."]

[node name="CanvasModulate2" type="CanvasModulate" parent="Day Night cycle"]
position = Vector2( -0.429321, 1.7171 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="Day Night cycle"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer"]
position = Vector2( 606.582, -89.1467 )
rotation = -1.5708
scale = Vector2( 0.3878, 1154.45 )
texture = SubResource( 2 )

[node name="ParallaxLayer6" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground"]
position = Vector2( -8.12115, 27.9898 )
motion_scale = Vector2( 0.1, 1 )

[node name="moon" type="Node2D" parent="Day Night cycle/ParallaxBackground/ParallaxLayer6"]
position = Vector2( -2.9364, 354.965 )

[node name="moon" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer6/moon"]
position = Vector2( 339.978, 633.414 )
texture = ExtResource( 3 )

[node name="moon2" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer6/moon"]
material = SubResource( 3 )
position = Vector2( 339.978, 633.414 )
texture = ExtResource( 3 )

[node name="moon3" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer6/moon"]
self_modulate = Color( 1, 1, 1, 0.235294 )
material = SubResource( 3 )
position = Vector2( 344.694, 593.974 )
scale = Vector2( 3.81998, 3.88026 )
texture = ExtResource( 4 )

[node name="sun" type="Node2D" parent="Day Night cycle/ParallaxBackground/ParallaxLayer6"]
position = Vector2( -16.2179, -40.83 )

[node name="Sprite" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer6/sun"]
modulate = Color( 0.972549, 0.529412, 0.235294, 1 )
position = Vector2( 390.67, 255.246 )
rotation = -1.5708
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer6/sun"]
modulate = Color( 0.972549, 0.529412, 0.235294, 1 )
material = SubResource( 4 )
position = Vector2( 390.67, 255.246 )
rotation = -1.5708
texture = ExtResource( 5 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground"]
position = Vector2( -13.2964, 359.004 )
motion_scale = Vector2( 0.25, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="cloud" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer4"]
position = Vector2( 484.972, -56.5522 )
texture = ExtResource( 6 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground"]
motion_scale = Vector2( 0.75, 1 )

[node name="Sprite2" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer5"]
position = Vector2( 0.88049, 807.502 )
rotation = -1.5708
scale = Vector2( 0.15253, 960 )
texture = SubResource( 2 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground"]
modulate = Color( 0.878431, 0.780392, 0.486275, 1 )
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="mountains" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer2"]
position = Vector2( 479.837, 296.944 )
texture = ExtResource( 7 )

[node name="mountains2" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer2"]
position = Vector2( 479.837, 695.965 )
scale = Vector2( 1, -0.718795 )
texture = ExtResource( 7 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground"]
position = Vector2( -983.743, 3.34045 )
motion_scale = Vector2( 0.6, 1 )

[node name="pyrate ship" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer3"]
position = Vector2( 936.446, 468.843 )
rotation = -0.0593387
scale = Vector2( 1, 0.932 )
texture = ExtResource( 8 )
offset = Vector2( -19.1546, -67.5755 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Day Night cycle/ParallaxBackground/ParallaxLayer3/pyrate ship"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 5 )

[node name="pyrate ship2" type="Sprite" parent="Day Night cycle/ParallaxBackground/ParallaxLayer3"]
position = Vector2( 934.546, 529.643 )
rotation = -0.0593387
scale = Vector2( 1, -0.932 )
texture = ExtResource( 8 )
offset = Vector2( -19.1546, -67.5755 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Day Night cycle/ParallaxBackground/ParallaxLayer3/pyrate ship2"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 6 )

[node name="ParallaxLayer7" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground"]
motion_scale = Vector2( 0.75, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="water2" type="TextureRect" parent="Day Night cycle/ParallaxBackground/ParallaxLayer7"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = -3.0
margin_top = 502.0
margin_right = 962.0
margin_bottom = 803.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 2

[node name="ParallaxLayer9" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground"]
motion_scale = Vector2( 0, 1 )

[node name="Mirror5" parent="Day Night cycle/ParallaxBackground/ParallaxLayer9" instance=ExtResource( 10 )]
position = Vector2( 0, 646.38 )
scale = Vector2( 1, 0.571969 )

[node name="CanvasModulate" type="CanvasModulate" parent="Day Night cycle/ParallaxBackground"]
position = Vector2( -0.429321, 1.7171 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="Day Night cycle"]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground2"]
modulate = Color( 0.556863, 0.556863, 0.556863, 1 )
position = Vector2( -45, -1000 )
scale = Vector2( 1, 2 )
z_index = -50
motion_scale = Vector2( 0.9, 0.9 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="Day Night cycle/ParallaxBackground2/ParallaxLayer2"]
position = Vector2( 399.203, 828.564 )
texture = ExtResource( 11 )

[node name="CanvasModulate2" type="CanvasModulate" parent="Day Night cycle/ParallaxBackground2"]
position = Vector2( -0.429321, 1.7171 )
color = Color( 0.92549, 0.964706, 0.968627, 1 )

[node name="ParallaxBackground3" type="ParallaxBackground" parent="Day Night cycle"]
layer = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="Day Night cycle/ParallaxBackground3"]
modulate = Color( 0.556863, 0.556863, 0.556863, 1 )
position = Vector2( -51.3721, -924.697 )
scale = Vector2( 1, 2 )
motion_scale = Vector2( 1.25, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite2" type="Sprite" parent="Day Night cycle/ParallaxBackground3/ParallaxLayer"]
position = Vector2( 408.983, 867.398 )
scale = Vector2( 0.99883, 1 )
texture = ExtResource( 11 )

[node name="grass" type="TextureRect" parent="Day Night cycle/ParallaxBackground3/ParallaxLayer/Sprite2"]
margin_left = -487.0
margin_top = -16.0
margin_right = 474.0
margin_bottom = 129.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 2

[node name="dirt9" type="TextureRect" parent="Day Night cycle/ParallaxBackground3/ParallaxLayer"]
margin_left = -73.2297
margin_top = 936.0
margin_right = 884.77
margin_bottom = 1060.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 2

[node name="CanvasModulate3" type="CanvasModulate" parent="Day Night cycle/ParallaxBackground3"]
position = Vector2( -0.429321, 1.7171 )
color = Color( 0.92549, 0.964706, 0.968627, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="Day Night cycle"]

[node name="light2" type="Sprite" parent="Day Night cycle/CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 7 )
position = Vector2( 480, 270 )
texture = ExtResource( 14 )

[node name="Timer" type="Label" parent="Day Night cycle/CanvasLayer"]
visible = false
margin_left = 37.3235
margin_top = 68.3089
margin_right = 85.3235
margin_bottom = 82.3089
custom_fonts/font = ExtResource( 15 )
text = "00:00"
script = ExtResource( 16 )

[node name="Trees2" type="ParallaxBackground" parent="Day Night cycle"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Day Night cycle/Trees2"]
modulate = Color( 0.54902, 0.513726, 0.513726, 1 )
position = Vector2( -723.218, -37.8429 )
motion_scale = Vector2( 0.8, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="tree" type="TextureRect" parent="Day Night cycle/Trees2/ParallaxLayer"]
margin_left = -514.108
margin_top = -973.571
margin_right = 509.892
margin_bottom = 50.4285
rect_rotation = -2.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 17 )
expand = true
stretch_mode = 2

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Day Night cycle/Trees2"]
modulate = Color( 0.54902, 0.513726, 0.513726, 1 )
position = Vector2( -723.218, -37.8429 )
motion_scale = Vector2( 0.9, 1 )
motion_mirroring = Vector2( 1024, 0 )

[node name="tree" type="TextureRect" parent="Day Night cycle/Trees2/ParallaxLayer2"]
margin_left = -17.2631
margin_top = 277.757
margin_right = 605.737
margin_bottom = 904.757
texture = ExtResource( 18 )
expand = true
stretch_mode = 1

[node name="CanvasModulate4" type="CanvasModulate" parent="Day Night cycle/Trees2"]
position = Vector2( -0.429321, 1.7171 )
color = Color( 0.92549, 0.964706, 0.968627, 1 )

